--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -77,13 +77,13 @@
             </a>
           </li>
           <li>
-            <a href="./index.html">
+            <a href="/student">
               <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
               <span class="title">학생 목록</span>
             </a>
           </li>
           <li>
-            <a href="./dept.html">
+            <a href="/dept">
               <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
               <span class="title">과정 목록</span>
             </a>
