--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -315,6 +315,13 @@ body {
   font-size: 18px;
   width: 70%;
 }
+.input-box select {
+  border: solid 2px #1e90ff;
+  border-radius: 5px;
+  padding: 1%;
+  font-size: 18px;
+  width: 70%;
+}
 .input-box textarea {
   padding: 10px;
   font-size: 16px;
